Removed manual setAppName call